--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="/" class="navbar__logo"><img src="" alt="Snappy" class="logoimg"/></a>
+        <a href="/" class="navbar__logo"><img src="images/Snappy Renders Logo.png" alt="Snappy" class="logoimg"/></a>
         <input type="checkbox" id="check">
         <div class="navbar__menu">
             <a href="/SnappyRenders/" class="navbar__link">Home</a>
