--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         </div>
         <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
     </nav>
+
+    <!--Hero Section-->
+    <div class="hero">
+        <div class="hero__content">
+            <h1>Snappy Renders</h1>
+            <p>Rendering at the snap of a finger</p>
+            <a href="/SnappyRenders/Contacts.html" class="button">Contact Us</a>
+        </div>
+    </div>
+        
     <!--Footer section-->
     <div id="footer" class="footer">
         <div class="footer__wrapper">
