--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
         <div class="hero__content">
         </div>
     </div>
-        
+
+    <!--Services Section-->
+    <div class="services">
+        <div class="services__content">
+            <h1>Need a rendering at the snap of a finger?</h1>
+
+            <h1>Snappy renders will help you visualize in 3D fast!</h1>
+
+            <h1>Whether it's a presentation or a product visualization, we will give you something to show off!</h1>
+        </div>
+    </div>
     <!--Footer section-->
     <div id="footer" class="footer">
         <div class="footer__wrapper">
