--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div class="services__content">
             <h1>Need a rendering at the snap of a finger?</h1>
 
-            <h1>Snappy renders will help you visualize in 3D fast!</h1>
+            <p>Snappy renders will help you visualize in 3D fast!</p>
 
-            <h1>Whether it's a presentation or a product visualization, we will give you something to show off!</h1>
+            <p>Whether it's a presentation or a product visualization, we will give you something to show off!</p>
         </div>
     </div>
     <!--Footer section-->
