--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
             <p>Snappy renders will help you visualize in 3D fast!</p>
 
-            <p>Whether it's a presentation or a product visualization, we will give you something to show off!</p>
+            <h1>Whether it's a presentation or a product visualization</h1>
+            
+            <p>we will give you something to show off!</p>
         </div>
     </div>
     <!--Footer section-->
