--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div class="services__content">
             <h1>Need a rendering at the snap of a finger?</h1>
 
-            <p>Snappy renders will help you visualize in 3D fast!</p>
+            <p>Whether it's a presentation or a product visualization</p>
 
-            <h1>Whether it's a presentation or a product visualization</h1>
+            <h1>Snappy renders will help you visualize in 3D fast!</h1>
             
-            <p>we will give you something to show off!</p>
+            <p>we'll give you something to show off in a snap!</p>
         </div>
     </div>
     <!--Footer section-->
