--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
     </div>
 
     <!--Services Section-->
+    <div class="Snappy">
+        <div class="snappy__content">
+            <a href="/SnappyRenders/3DRenders"><img src=" " alt="SnappyHead" class="logoimg"/></a>
+            <a href="/SnappyRenders/3DPrinting"><img src=" " alt="SnappyMiddle" class="logoimg"/></a>
+            <a href="/SnappyRenders/2DRenders"><img src=" " alt="SnappyButt" class="logoimg"/></a>
+            <a href="/SnappyRenders/Animations"><img src=" " alt="SnappyTail" class="logoimg"/></a>
+        </div>
+    </div>
     <div class="services">
         <div class="services__content">
             <h1>Need a rendering at the snap of a finger?</h1>
