--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <!--Services Section-->
     <div class="Snappy">
         <div class="snappy__content">
-            <a href="/SnappyRenders/3DRenders"><img src=" " alt="SnappyHead" class="logoimg"/></a>
-            <a href="/SnappyRenders/3DPrinting"><img src=" " alt="SnappyMiddle" class="logoimg"/></a>
-            <a href="/SnappyRenders/2DRenders"><img src=" " alt="SnappyButt" class="logoimg"/></a>
-            <a href="/SnappyRenders/Animations"><img src=" " alt="SnappyTail" class="logoimg"/></a>
+            <a href="/SnappyRenders/3DRenders.html"><img src=" " alt="SnappyHead" class="logoimg"/></a>
+            <a href="/SnappyRenders/3DPrinting.html"><img src=" " alt="SnappyMiddle" class="logoimg"/></a>
+            <a href="/SnappyRenders/2DRenders.html"><img src=" " alt="SnappyButt" class="logoimg"/></a>
+            <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="logoimg"/></a>
         </div>
     </div>
     <div class="services">
