--- a/Animations.html
+++ b/Animations.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    </script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snappy Renders</title>
+    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+    integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+    crossorigin="anonymous">
+</head>
+<body>
+    <style>
+        ::-webkit-scrollbar{
+            display: none;
+        }
+    </style>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <a href="/SnappyRenders/" class="navbar__logo"><img src="images/Snappy Renders Logo.png" alt="Snappy" class="logoimg"/></a>
+        <input type="checkbox" id="check">
+        <div class="navbar__menu">
+            <a href="/SnappyRenders/" class="navbar__link">Home</a>
+            <a href="/SnappyRenders/Aboutus.html" class="navbar__link">About us</a>
+            <a href="/SnappyRenders/Services.html" class="navbar__link">Services</a>
+            <a href="/SnappyRenders/Contacts.html" class="navbar__link">Contacts</a>
+            <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
+        </div>
+        <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
+    </nav>
+ <!--Footer section-->
+    <div id="footer" class="footer">
+        <div class="footer__wrapper">
+            <div class="footer__desc">
+                <h1>Snappy Renders</h1>
+                <p>Located in Toronto Ontario Canada.</p>
+                <p id="phone">[Phone number}</p>
+                <p id="email">[Email]</p>
+            </div>
+            <div class="footer__links">
+                <h2 class="footer__title">Contact Us</h2>
+                <a href="/SnappyRenders/Contacts.html" class="footer__link">Contact</a>
+                <a href="/SnappyRenders/Contacts.html" class="footer__link">Support</a>
+            </div>
+        </div>
+        <div class="footer__wrapper">
+            <div class="footer__links">
+                <h2 class="footer__title">Social Media</h2>
+                    <a href="/SnappyRenders/Contacts.html" class="footer__link">Contact</a>
+                    <a href="/SnappyRenders/Contacts.html" class="footer__link">Support</a>
+            </div>
+            <div class="footer__links">
+                <h2 class="footer__title">Services</h2>
+                <a href="/SnappyRenders/Services.html" class="footer__link">Pricing</a>
+                <a href="/SnappyRenders/Services.html" class="footer__link">Features</a>
+            </div>
+        </div>
+         <a href="https://dynamic-technologies.ca"><img class="Dtech__tag" src="./images/Dtech tag.png" alt=" " class="d-tech"/></a>
+    </div>
+    <script type="text/javascript">
+        window.addEventListener('scroll', reveal);
 
+        function reveal(){
+            var reveals = document.querySelectorAll('.reveal');
+
+            for(var i = 0; i < reveals.length; i++){
+                
+                var windowheight = window.innerHeight;
+                var revealtop = reveals[i].getBoundingClientRect().top;
+                var revealpoint = 150;
+
+                if(revealtop < windowheight - revealpoint){
+                    reveals[i].classList.add('active');
+                }
+                else{
+                    reveals[i].classList.remove('active');
+                }
+            }
+        }
+    </script>
+    <script src="app.js"></script>
+</body>
+</html>
