--- a/3DPrinting.html
+++ b/3DPrinting.html
@@ -30,6 +30,14 @@
         </div>
         <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
     </nav>
+
+    <!-- Services -->
+     <div class="services">
+        <div class="services__content">
+            <h1>3D Printing...</h1>
+        </div>
+     </div>
+    
  <!--Footer section-->
     <div id="footer" class="footer">
         <div class="footer__wrapper">
