--- a/Services.html
+++ b/Services.html
@@ -32,11 +32,14 @@
     </nav>
 
     <!-- Services -->
-     <div class="services">
-        <div class="services__content">
-            <h1>2D Rendering...</h1>
+     <div class="Snappy">
+        <div class="snappy__content">
+            <a href="/SnappyRenders/3DRenders.html"><img src=" " alt="SnappyHead" class="logoimg"/></a>
+            <a href="/SnappyRenders/3DPrinting.html"><img src=" " alt="SnappyMiddle" class="logoimg"/></a>
+            <a href="/SnappyRenders/2DRenders.html"><img src=" " alt="SnappyButt" class="logoimg"/></a>
+            <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="logoimg"/></a>
         </div>
-     </div>
+    </div>
     
  <!--Footer section-->
     <div id="footer" class="footer">
