--- a/Aboutus.html
+++ b/Aboutus.html
@@ -32,11 +32,17 @@
     </nav>
 
     <!-- Services -->
-     <div class="services">
+    <div class="services">
         <div class="services__content">
-            <h1>2D Rendering...</h1>
+            <h1>Need a rendering at the snap of a finger?</h1>
+
+            <p>Whether it's a presentation or a product visualization</p>
+
+            <h1>Snappy renders will help you visualize in 3D fast!</h1>
+            
+            <p>we'll give you something to show off in a snap!</p>
         </div>
-     </div>
+    </div>
     
  <!--Footer section-->
     <div id="footer" class="footer">
