--- a/Contacts.html
+++ b/Contacts.html
@@ -34,7 +34,7 @@
     <!-- Services -->
      <div class="services">
         <div class="services__content">
-            <h1>2D Rendering...</h1>
+            <h1>Contact Us...</h1>
         </div>
      </div>
     
