--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <!--Services Section-->
-    <div class="Snappy">
+    <div class="Snappy reveal">
         <div class="snappy__content">
             <a href="/SnappyRenders/3DRenders.html"><img src=" " alt="SnappyHead" class="logoimg"/></a>
             <a href="/SnappyRenders/3DPrinting.html"><img src=" " alt="SnappyMiddle" class="logoimg"/></a>
@@ -46,7 +46,7 @@
             <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="logoimg"/></a>
         </div>
     </div>
-    <div class="services">
+    <div class="services reveal">
         <div class="services__content">
             <h1>Need a rendering at the snap of a finger?</h1>
 
