--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     </div>
     <div class="services reveal">
         <div class="services__content">
-            <h1>Need a rendering at the snap of a finger?</h1>
+            <h1>Need a rendering at the <p>snap</p> of a finger?</h1>
 
-            <p>Whether it's a presentation or a product visualization</p>
+            <h2>Whether it's a presentation or a product <p>visualization</p></h2>
 
-            <h1>Snappy renders will help you visualize in 3D fast!</h1>
+            <h1>Snappy renders will help you visualize in <p>3D</p> fast!</h1>
             
-            <p>we'll give you something to show off in a snap!</p>
+            <h2>we'll give you something to <p>show off</p> in a snap!</h2>
         </div>
     </div>
     <!--Footer section-->
