--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--Hero Section-->
     <div class="hero">
         <div class="hero__content">
-            <div class="hero__img"></div>
+            <div class="hero__img" src="images/SnappyRendersHero.png"></div>
         </div>
     </div>
 
