--- a/index.html
+++ b/index.html
@@ -48,13 +48,16 @@
         </div>
     </div>
     <div class="services reveal">
-        <div class="services__content">
+        <div class="services__content1">
             <h1>Need a rendering at the <b>snap</b> of a finger?</h1>
-
+        </div>
+         <div class="services__content2">
             <h2>Whether it's a presentation or a product <b>visualization</b></h2>
-
+         </div>
+         <div class="services__content1">
             <h1>Snappy renders will help you visualize in <b>3D</b> fast!</h1>
-            
+         </div>
+         <div class="services__content2">
             <h2>we'll give you something to <b>show off</b> in a snap!</h2>
         </div>
     </div>
