--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     </nav>
 
     <!--Hero Section-->
-    <div class="hero">
-        <div class="hero__img" src="images/snappyRendersHero.png"></div>
-    </div>
+      <div class="Hero">
+          <div class="Hero__Container">
+              <img src="images/snappyRendersHero.png" alt="logo">
+          </div>
+      </div>
 
     <!--Services Section-->
     <div class="Snappy reveal">
