--- a/Aboutus.html
+++ b/Aboutus.html
@@ -32,15 +32,18 @@
     </nav>
 
     <!-- Services -->
-    <div class="services">
-        <div class="services__content">
-            <h1>Need a rendering at the snap of a finger?</h1>
-
-            <p>Whether it's a presentation or a product visualization</p>
-
-            <h1>Snappy renders will help you visualize in 3D fast!</h1>
-            
-            <p>we'll give you something to show off in a snap!</p>
+<div class="services reveal">
+        <div class="services__content1">
+            <h1>Need a rendering at the <b>snap</b> of a finger?</h1>
+        </div>
+         <div class="services__content2">
+            <h2>Whether it's a presentation or a product <b>visualization</b></h2>
+         </div>
+         <div class="services__content1">
+            <h1>Snappy renders will help you visualize in <b>3D</b> fast!</h1>
+         </div>
+         <div class="services__content2">
+            <h2>we'll give you something to <b>show off</b> in a snap!</h2>
         </div>
     </div>
     
