--- a/Contacts.html
+++ b/Contacts.html
@@ -33,7 +33,7 @@
 
     <!-- Services -->
      <div class="services">
-        <div class="services__content">
+        <div class="services__content1">
             <h1>Contact Us...</h1>
         </div>
      </div>
