--- a/3DRenders.html
+++ b/3DRenders.html
@@ -33,7 +33,7 @@
 
         <!-- Services -->
      <div class="services">
-        <div class="services__content">
+        <div class="services__content1">
             <h1>3D Rendering...</h1>
         </div>
      </div>
