--- a/2DRenders.html
+++ b/2DRenders.html
@@ -33,7 +33,7 @@
 
     <!-- Services -->
      <div class="services">
-        <div class="services__content">
+        <div class="services__content1">
             <h1>2D Rendering...</h1>
         </div>
      </div>
