--- a/Aboutus.html
+++ b/Aboutus.html
@@ -32,7 +32,7 @@
     </nav>
 
     <!-- Services -->
-<div class="services reveal">
+<div class="services ">
         <div class="services__content1">
             <h1>Need a rendering at the <b>snap</b> of a finger?</h1>
         </div>
