--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
               <img src="images/snappyRendersHero.png" alt="logo">
           </div>
       </div>
-
+    
+    <!--Render Video-->
+    <div class="Render">
+        <div class="Render__Container">
+        <img src="images/render.gif" alt="render-vid">
+        </div>
+    </div>
+    
     <!--Services Section-->
     <div class="Snappy reveal">
         <div class="snappy__content">
