--- a/3DRenders.html
+++ b/3DRenders.html
@@ -37,6 +37,11 @@
             <h1>3D Rendering...</h1>
         </div>
      </div>
+    <div class="Render">
+        <div class="Render__Container">
+        <img src="images/render.gif" alt="render-vid">
+        </div>
+    </div>
     
  <!--Footer section-->
     <div id="footer" class="footer">
