--- a/Services.html
+++ b/Services.html
@@ -40,6 +40,11 @@
             <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="logoimg"/></a>
         </div>
     </div>
+    <div class="Render">
+        <div class="Render__Container">
+        <img src="images/render.gif" alt="render-vid">
+        </div>
+    </div>
     
  <!--Footer section-->
     <div id="footer" class="footer">
