--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <!--Services Section-->
     <div class="Snappy reveal">
         <div class="snappy__content">
-            <a href="/SnappyRenders/3DRenders.html"><img src=" " alt="SnappyHead" class="logoimg"/></a>
-            <a href="/SnappyRenders/3DPrinting.html"><img src=" " alt="SnappyMiddle" class="logoimg"/></a>
-            <a href="/SnappyRenders/2DRenders.html"><img src=" " alt="SnappyButt" class="logoimg"/></a>
+            <a href="/SnappyRenders/3DRenders.html"><img src="images/SnappyHead.png" alt="SnappyHead" class="logoimg"/></a>
+            <a href="/SnappyRenders/3DPrinting.html"><img src="images/SnappyBody.png" alt="SnappyMiddle" class="logoimg"/></a>
+            <a href="/SnappyRenders/2DRenders.html"><img src="images/SnappyButt.png" alt="SnappyButt" class="logoimg"/></a>
             <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="logoimg"/></a>
         </div>
     </div>
