--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <!--Services Section-->
     <div class="Snappy reveal">
         <div class="snappy__content">
-            <a href="/SnappyRenders/3DRenders.html"><img src="images/SnappyHead.png" alt="SnappyHead" class="logoimg"/></a>
-            <a href="/SnappyRenders/3DPrinting.html"><img src="images/SnappyBody.png" alt="SnappyMiddle" class="logoimg"/></a>
-            <a href="/SnappyRenders/2DRenders.html"><img src="images/SnappyButt.png" alt="SnappyButt" class="logoimg"/></a>
-            <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="logoimg"/></a>
+            <a href="/SnappyRenders/3DRenders.html"><img src="images/SnappyHead.png" alt="SnappyHead" class="Snappyimg"/></a>
+            <a href="/SnappyRenders/3DPrinting.html"><img src="images/SnappyBody.png" alt="SnappyMiddle" class="Snappyimg"/></a>
+            <a href="/SnappyRenders/2DRenders.html"><img src="images/SnappyButt.png" alt="SnappyButt" class="Snappyimg"/></a>
+            <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="Snappyimg"/></a>
         </div>
     </div>
     <div class="services reveal">
