--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="/SnappyRenders/3DRenders.html"><img src="images/SnappyHead.png" alt="SnappyHead" class="Snappyimg"/></a>
             <a href="/SnappyRenders/3DPrinting.html"><img src="images/SnappyBody.png" alt="SnappyMiddle" class="Snappyimg"/></a>
             <a href="/SnappyRenders/2DRenders.html"><img src="images/SnappyButt.png" alt="SnappyButt" class="Snappyimg"/></a>
-            <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="Snappyimg"/></a>
+            <a href="/SnappyRenders/Animations.html"><img src="images/SnappyTail.png" alt="SnappyTail" class="Snappyimg"/></a>
         </div>
     </div>
     <div class="services reveal">
