--- a/Services.html
+++ b/Services.html
@@ -34,10 +34,10 @@
     <!-- Services -->
      <div class="Snappy">
         <div class="snappy__content">
-            <a href="/SnappyRenders/3DRenders.html"><img src=" " alt="SnappyHead" class="logoimg"/></a>
-            <a href="/SnappyRenders/3DPrinting.html"><img src=" " alt="SnappyMiddle" class="logoimg"/></a>
-            <a href="/SnappyRenders/2DRenders.html"><img src=" " alt="SnappyButt" class="logoimg"/></a>
-            <a href="/SnappyRenders/Animations.html"><img src=" " alt="SnappyTail" class="logoimg"/></a>
+            <a href="/SnappyRenders/3DRenders.html"><img src="images/SnappyHead.png" alt="SnappyHead" class="Snappyimg"/></a>
+            <a href="/SnappyRenders/3DPrinting.html"><img src="images/SnappyBody.png" alt="SnappyMiddle" class="Snappyimg"/></a>
+            <a href="/SnappyRenders/2DRenders.html"><img src="images/SnappyButt.png" alt="SnappyButt" class="Snappyimg"/></a>
+            <a href="/SnappyRenders/Animations.html"><img src="images/SnappyTail.png" alt="SnappyTail" class="Snappyimg"/></a>
         </div>
     </div>
     <div class="Render">
