--- a/index.html
+++ b/index.html
@@ -68,6 +68,32 @@
             <h2>we'll give you something to <b>show off</b> in a snap!</h2>
         </div>
     </div>
+
+    <!--Contacts Section-->
+    <div class="email">
+        <div class="email__content">
+            <h1>Contact Us Today</h1>
+            <p>Sign up now to receive a quote</p>
+            <div class="form__wrap">
+                <form target="_blank" action="https://formsubmit.co/@gmail.com" method="POST">
+                    <input type="text" name="name" placeholder="Name" required>
+                    <input type="email" name="email" placeholder="Enter your email" required>
+                    <input type="phone" name="phone" placeholder="Enter your phone number" required>
+                    <select id="service" class="form-control" name="subject" required>
+                      <option value="Select" type="placeholder"> --Select Your Service--</option>
+                      <option value="3D Rendering">3D Rendering</option>
+                      <option value="3D Printing">3D Printing</option>
+                      <option value="2D Rendering">2D Rendering</option>
+                      <option value="Animation">Animation</option>
+                    </select>
+                    <input id="service" class="form-control" name="Message" placeholder="Enter a short message detailing what you need">
+                    <button class="button" type="submit">Submit</button>
+               <!--<input type="hidden" name="_next" value="https://dynamic-technologies.ca/thanks.html">-->
+               </form>
+            </div>
+         </div>
+    </div>
+    
     <!--Footer section-->
     <div id="footer" class="footer">
         <div class="footer__wrapper">
