--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     
     <!--Services Section-->
-    <div class="Snappy reveal">
+    <div class="Snappy ">
         <div class="snappy__content">
             <a href="/SnappyRenders/3DRenders.html"><img src="images/SnappyHead.png" alt="SnappyHead" class="Snappyimg"/></a>
             <a href="/SnappyRenders/3DPrinting.html"><img src="images/SnappyBody.png" alt="SnappyMiddle" class="Snappyimg"/></a>
@@ -54,7 +54,7 @@
             <a href="/SnappyRenders/Animations.html"><img src="images/SnappyTail.png" alt="SnappyTail" class="Snappyimg"/></a>
         </div>
     </div>
-    <div class="services reveal">
+    <div class="services ">
         <div class="services__content1">
             <h1>Need a rendering at the <b>snap</b> of a finger?</h1>
         </div>
