--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         </div>
     </div>
     <div class="services ">
+        <div class="custom-shape-divider-top-1711032884">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill"></path>
+    </svg>
+</div>
         <div class="services__content1">
             <h1>Need a rendering at the <b>snap</b> of a finger?</h1>
         </div>
